--- a/package.json
+++ b/package.json
@@ -21,5 +21,9 @@
   "bugs": {
     "url": "https://github.com/uncletammy/sails-hooks-irc/issues"
   },
-  "homepage": "https://github.com/uncletammy/sails-hooks-irc"
+  "homepage": "https://github.com/uncletammy/sails-hooks-irc",
+  "dependencies": {
+    "lodash": "~2.4.1",
+    "irc": "~0.3.7"
+  }
 }
